Change pipeline components names and edit the pipeline notebook
Signed-off-by: Diana Atanasova <dianaa@vmware.com>

--- a/pipeline/iris_classification_pipeline.ipynb
+++ b/pipeline/iris_classification_pipeline.ipynb
@@ -41,7 +41,7 @@
     }
    },
    "source": [
-    "A pipeline component is one step of a workflow/pipeline that does a specific task."
+    "A pipeline component is one step of a pipeline that does a specific task."
    ]
   },
   {
@@ -63,23 +63,14 @@
     }
    },
    "source": [
-    "Pipeline component is made up of a code, packaged as a Docker image. When a pipeline is run, the system launches one or more Kubernetes Pods corresponding to the steps (components) in the pipeline. The Pods start Docker containers, and the containers in turn start your programs."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "The left upper image, shows the pipeline this workshop creates. It is a simple pipeline with just a few steps:\n",
+    "The left upper image, shows the pipeline this workshop creates.It is a simple pipeline with just a few steps:\n",
+    "\n",
     "1. The first steps train models using respectively decision tree and K-nearest neighbours algorythms. These two steps are executing in paralel. \n",
     "2. The results from the these steps are taken in consideration in the next steps - conditional steps. These steps check which model provides higher accuracity. \n",
     "3. Depending on the results of the conditional components only the model that give higher accuracity is saved for later use/serving.\n",
     "\n",
-    "When a pipeline is run, the system launches one or more Kubernetes Pods corresponding to the steps in the workflow (pipeline). The Pods start Docker containers, and the containers in turn start your programs."
+    "The image on the right depicts a pipeline component. We could think of a pipeline component as a function that has its body/logic and a signiture - name, input parameters, outputs. The distinguishing feature of pipeline components is that their logic (ML code) resides in a Docker image. So, as part of the components specification/signiture we need to provide the container image, the command to use to run your component’s code, and the command-line arguments to pass to your component’s code. \n",
+    "When a pipeline is run, the system launches one or more Kubernetes Pods corresponding to the steps (components) in the pipeline. The Pods start Docker containers, and the containers in turn start your programs.\n"
    ]
   },
   {
@@ -92,9 +83,9 @@
    "source": [
     "# Steps to create a Pipeline\n",
     "1. Write the ML python code\n",
-    "3. Define a Pipeline specification\n",
-    "    - Containerize component’s code\n",
-    "    - Define component's specifications (interfaces)\n",
+    "2. Containerize components code\n",
+    "3. Define a Pipeline\n",
+    "    - Define component's specifications\n",
     "    \n",
     "    \n",
     "*Leverage [kfp](https://kubeflow-pipelines.readthedocs.io/en/latest/source/kfp.html) library "
@@ -110,30 +101,18 @@
    "source": [
     "##  1. ML Python Code\n",
     "You could find the ML code here:\n",
-    "[iris_classification.py](../ml/iris_classification.py)\n",
+    "[iris_classification.py](../ml/iris_classification.py)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Containerize components code\n",
     "\n",
-    "-----\n",
-    "**def build_model(model=\"\", parameter=\"\")**\n",
+    "We alreade created an image that contains our ML code: \n",
     "\n",
-    "```\n",
-    "Build ML model\n",
-    "\n",
-    ":param str model: Specify the algorithm to be used for building the model - \"knn\" or \"tree\"\n",
-    ":param str parameter: Parameter used when building the model. \n",
-    "    In case of knn \"n_neighbors\" - int\n",
-    "    in case of tree \"splitter\" - random\n",
-    "``` \n",
-    "------------\n",
-    "**def save_final_model(model=\"\", parameter=\"\")**\n",
-    "\n",
-    "```\n",
-    "Build a ML model and save it in a file\n",
-    "\n",
-    ":param str model: Specify the algorithm to be used for building the model - \"knn\" or \"tree\"\n",
-    ":param str parameter: Parameter used when building the model. \n",
-    "    In case of knn \"n_neighbors\" - int\n",
-    "    in case of tree splitter {“best”, “random”}\n",
-    "```"
+    ">**annajung/iris:latest**"
    ]
   },
   {
